--- a/ecommerce/eshop/templates/eshop/display_products.html
+++ b/ecommerce/eshop/templates/eshop/display_products.html
@@ -11,7 +11,7 @@
         {% endif %}
         <!-- Product image-->
         <a class="btn" href="{% url "product_detail" product.id %}">
-            <img class="card-img-top" src={{product.product_image.url}} alt="..." />
+            <img class="card-img-top" src={{product.image.url}} alt="..." />
         </a>
         <!-- Product details-->
         <div class="card-body p-4">
