--- a/ecommerce/eshop/templates/eshop/product_create_or_update.html
+++ b/ecommerce/eshop/templates/eshop/product_create_or_update.html
@@ -1,56 +1,49 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 {% load django_bootstrap5 %}
 {% block header %}
   Admin in style
-{% endblock %}
-
+{% endblock header %}
 {% block content %}
-  <h1>{{ delivery_info }}</h1>
   <div class="container rounded bg-white mt-5 mb-5">
-    <form class="form" method="POST" action={% url 'profile_detail' %}>
+    <form class="form" method="post" enctype="multipart/form-data">
       <div class="row">
         <div class="col-md-4 border-right">
           <div class="p-3 py-5">
             <div class="d-flex justify-content-between align-items-center mb-3">
               <h4 class="text-right">Product:</h4>
             </div>
-
             {% csrf_token %}
             {% bootstrap_form form %}
           </div>
         </div>
-
         <div class="col-md-4 border-right">
           <div class="p-3 py-5">
             <div class="d-flex justify-content-between align-items-center mb-3">
               <h4 class="text-right">Variants:</h4>
             </div>
-            {{ variant_formset.management_form }}
-            {% for form in variant_formset %}
-              {{ form.as_p }}
+            {{ variants_formset.management_form }}
+            {% for form in variants_formset %}
+              {% bootstrap_form form %}
             {% endfor %}
           </div>
         </div>
         <div class="col-md-4">
           <div class="p-3 py-5">
             <div class="d-flex justify-content-between align-items-center mb-3">
-              <h4 class="text-right">Delivery Informations</h4>
+              <h4 class="text-right">Images</h4>
             </div>
-            {{ image_formset.management_form }}
-            {% for form in image_formset %}
-              {{ form.as_p }}
+            {{ images_formset.management_form }}
+            {% for form in images_formset %}
+              {% bootstrap_form form %}
             {% endfor %}
           </div>
         </div>
         <div class="mt-5 text-center">
-          <button class="btn btn-secondary btn-dark btn-login" type="submit">Save Profile</button>
+          <button class="btn btn-secondary btn-dark btn-login" type="submit">Save Product</button>
         </div>
       </div>
     </form>
   </div>
-  
-{% endblock %}
-
+{% endblock content %}
 {% block extra_body %}
-
-{% endblock %}
+{% endblock extra_body %}
